[package]
name = "crossposter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bisky = "0.3.0"
chrono = "0.4.29"
futures-util = "0.3.28"
mastodon-async = { version = "1.3.0", default-features = false, features = [
    "rustls-tls",
    "json",
] }
reqwest = "0.11.20"
tokio = { version = "1.32.0", features = ["full"] }
